--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
   <name>case-test</name>
   <description>easy testing for cases</description>
+  <url>http://wesleyone.github.io/</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -44,7 +45,6 @@
     <developer>
       <name>WesleyOne</name>
       <email>wesleyone666@163.com</email>
-      <url>http://wesleyone.github.io/</url>
       <timezone>+8</timezone>
     </developer>
   </developers>
@@ -76,7 +76,7 @@
           <autoReleaseAfterClose>false</autoReleaseAfterClose>
         </configuration>
       </plugin>
-
+      <!-- Source -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
@@ -90,7 +90,21 @@
           </execution>
         </executions>
       </plugin>
-
+      <!-- Javadoc -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9.1</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- GPG -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
