--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.github.wesleyone</groupId>
   <artifactId>case-test</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0-release</version>
 
   <name>case-test</name>
   <description>easy testing for cases</description>
